menu de Centros de Salud

--- a/SistemaPlanificacion.AplicacionWeb/Views/Shared/_Layout.cshtml
+++ b/SistemaPlanificacion.AplicacionWeb/Views/Shared/_Layout.cshtml
@@ -58,6 +58,8 @@
                         <a class="collapse-item" href="@Url.Action("Index","Usuario")">Usuario</a>
                         <a class="collapse-item" href="@Url.Action("Index","Empresa")">Empresa</a>
                         <a class="collapse-item" href="@Url.Action("Index","Programa")">Programa</a>
+                        <a class="collapse-item" href="@Url.Action("Index","CentroSalud")">CentroSalud</a>
+
                     </div>
                 </div>
             </li>
